Bug 1452528 Don't clear the controller on non-subresource channel loads when redirect mode is "follow". r=baku